# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-snapshot-cli"
version = "25.0.0-dev.0"
authors = ["ASIMOV Community"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV Snapshot Command-Line Interface (CLI)"
#documentation = ""
readme = true
homepage = "https://cli.asimov.sh"
repository = "https://github.com/asimov-platform/asimov-snapshot-cli"
license = "Unlicense"
keywords = ["asimov", "ai", "cli"]
categories = ["command-line-utilities", "text-processing"]
publish = true

[features]
default = ["all"]
all = []
unstable = ["all"]

[build-dependencies]
cfg_aliases = "0.2"
shadow-rs = { version = "1.0", features = [
    "build",
    "tzdb",
], default-features = false }
cc = "1.2"

[dependencies]
asimov-env = "25.0.0-dev.14"
asimov-module = "25.0.0-dev.14"
cap-std = "3.4"
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "now",
] }
clap = { version = "4.5", default-features = false }
clientele = { version = "0.3.8", features = ["serde-json", "tokio"] }
color-print = "=0.3.7"
hex = { version = "0.4", default-features = false, features = ["std"] }
serde_yml = { version = "0.0.12", default-features = false }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov-snapshot"
path = "src/main.rs"

[dev-dependencies]
tempfile = { version = "3.20", default-features = false }
